Fix accessibility issues detected by Axe

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   background-color: #E6F0DE;
   --main-bg: #e6f0de;
   --header-bg: #3d5732;
-  --accent: #535bf2;
+  --accent: #353dd6;
   --light-link: #b2d1ff;
   --focus: #fff;
   --btn-select-bg: #b2d1ff;
